<resources>
    <string name="app_name">Snake Game</string>
    <string name="left">Left</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="right">Right</string>
    <string name="start_game">Start Game</string>
    <string name="share_score">Share Score</string>
    <string name="share_subject">Snake Game app</string>
    <string name="share_text">My best score is %1$d!</string>
    <string name="share_title">Send your record!</string>
    <string name="best_score">Best Score: %1$d</string>
    <string name="game_over_message">Game Over\nPress any key to exit</string>
    <string name="theme_default">Default</string>
    <string name="theme_default_pixel">Default Pixel</string>
    <string name="theme_cat">Cats</string>
    <string name="theme_label">Theme:</string>
</resources>